# Crosspoint-Emulator-Matcha

./: CMakeLists.txt  README.md
sim/include/: ArduinoJson.h  ArduinoStub.h  EInkDisplay.h  ESP.h  FreeRTOSStub.h  FsHelpers.h  HalDisplay.h  HalGPIO.h  HalStorage.h  I18nKeys.h  InputManager.h  NetworkUdp.h  WString.h  WiFi.h  Wire.h  esp_http_client.h  esp_ota_ops.h  esp_partition.h  esp_rom_crc.h  esp_system.h  esp_wifi.h  qrcode.h  spi_flash_mmap.h
sim/include/mbedtls/: sha256.h
sim/src/: arduino_stub.cpp  crosspoint_web_server_stub.cpp  excluded_activity_stubs.cpp  fork_compat_stubs.cpp  freertos_stub.cpp  http_downloader_stub.cpp  image_decoder_stubs.cpp  image_to_bmp.cpp  jpeg_to_bmp_converter_stub.cpp  json_settings_stub.cpp  main_sim.cpp  ota_updater_stub.cpp  sim_display.cpp  sim_gpio.cpp  sim_storage.cpp  translation_activity_sim.cpp
